feat: Add support for publishing wheels bundling dcmqi executables
This adds support for building dcmqi wheels and follows the example outlined in the s5cmd python distribution package (https://github.com/ImagingDataCommons/s5cmd-python-distributions/commit/56b84d679e3a14421ca4884406e825117eee4232#diff-bc37d034bad564583790a46f19d807abfe519c5671395fd494d8cce506c42947)

It includes:

* Support building wheels for linux, macos and win64

* Extraction of package version from source control by leveraging `setuptools-scm`.

* Infrastructure for building sphinx-based documentation.

* Pre-commit hooks for checking style

* Dependabot configuration

* GitHub workflows for continuous integration (`ci.yml`) and continuous
  development (`cd.yml`). Each time a GitHub Release is created, it
  triggers the build, test and publishing of wheels.

--- a/.copier-answers.yml
+++ b/.copier-answers.yml
@@ -6,7 +6,7 @@ email: lnuernberg@bwh.harvard.edu
 full_name: Leonard Nürnberg
 license: MIT
 org: ImagingDataCommons
-project_name: 'dcmqi-python-distributions'
+project_name: "dcmqi"
 project_short_description: Python distribution of the DCMQI library collection.
-url: 'https://github.com/ImagingDataCommons/dcmqi-python-distributions'
+url: "https://github.com/ImagingDataCommons/dcmqi-python-distributions"
 vcs: true
