--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,8 +1,68 @@
+# Guided by the structure set-up by JC for the s5cmd python distributions project:
+# https://github.com/ImagingDataCommons/s5cmd-python-distributions/blob/56b84d679e3a14421ca4884406e825117eee4232/CMakeLists.txt
+
 cmake_minimum_required(VERSION 3.15...3.26)
-project(${SKBUILD_PROJECT_NAME} LANGUAGES CXX)
+project(${SKBUILD_PROJECT_NAME} LANGUAGES NONE)
 
-set(PYBIND11_FINDPYTHON ON)
-find_package(pybind11 CONFIG REQUIRED)
+function(_check_archive dest_file expected_sha256 output_var)
+  get_filename_component(filename ${dest_file} NAME)
+  message(STATUS "Checking ${filename}")
 
-pybind11_add_module(_core MODULE src/main.cpp)
-install(TARGETS _core DESTINATION ${SKBUILD_PROJECT_NAME})
+  if(NOT EXISTS ${dest_file})
+    message(STATUS "Checking ${filename} - nonexistent")
+    set(${output_var} "nonexistent" PARENT_SCOPE)
+    return()
+  endif()
+
+  file(SHA256 ${dest_file} current_hash)
+  if(NOT ${current_hash} STREQUAL ${expected_sha256})
+    message(STATUS "Checking ${filename} - expired")
+    set(${output_var} "expired" PARENT_SCOPE)
+    return()
+  endif()
+
+  message(STATUS "Checking ${filename} - up-to-date")
+  set(${output_var} "ok" PARENT_SCOPE)
+endfunction()
+
+# Set in the current scope the following variables:
+# - dcmqi_archive_url
+# - dcmqi_archive_sha256
+include(${CMAKE_CURRENT_SOURCE_DIR}/dcmqiUrls.cmake)
+
+#
+# Download & extract archive
+#
+set(download_dir "${PROJECT_BINARY_DIR}")
+set(extract_dir "${PROJECT_BINARY_DIR}/dcmqi-binary-distribution")
+include(FetchContent)
+FetchContent_Populate(dcmqi
+  URL ${dcmqi_archive_url}
+  URL_HASH SHA256=${dcmqi_archive_sha256}
+  DOWNLOAD_DIR ${download_dir}
+  SOURCE_DIR "${extract_dir}"
+  )
+
+#
+# Install executable
+#
+
+set(_permissions PERMISSIONS
+  OWNER_READ OWNER_WRITE OWNER_EXECUTE
+  GROUP_READ GROUP_EXECUTE
+  WORLD_READ WORLD_EXECUTE
+  )
+
+set(itkimage2segimage_executable_name "itkimage2segimage${CMAKE_EXECUTABLE_SUFFIX}")
+set(segimage2itkimage_executable_name "segimage2itkimage${CMAKE_EXECUTABLE_SUFFIX}")
+set(tid1500writer_executable_name "tid1500writer${CMAKE_EXECUTABLE_SUFFIX}")
+set(tid1500reader_executable_name "tid1500reader${CMAKE_EXECUTABLE_SUFFIX}")
+set(itkimage2paramap_executable_name "itkimage2paramap${CMAKE_EXECUTABLE_SUFFIX}")
+set(paramap2itkimage_executable_name "paramap2itkimage${CMAKE_EXECUTABLE_SUFFIX}")
+
+install(PROGRAMS ${extract_dir}/bin/${itkimage2segimage_executable_name} DESTINATION "dcmqi/bin" ${_permissions})
+install(PROGRAMS ${extract_dir}/bin/${segimage2itkimage_executable_name} DESTINATION "dcmqi/bin" ${_permissions})
+install(PROGRAMS ${extract_dir}/bin/${tid1500writer_executable_name} DESTINATION "dcmqi/bin" ${_permissions})
+install(PROGRAMS ${extract_dir}/bin/${tid1500reader_executable_name} DESTINATION "dcmqi/bin" ${_permissions})
+install(PROGRAMS ${extract_dir}/bin/${itkimage2paramap_executable_name} DESTINATION "dcmqi/bin" ${_permissions})
+install(PROGRAMS ${extract_dir}/bin/${paramap2itkimage_executable_name} DESTINATION "dcmqi/bin" ${_permissions})
