--- a/.github/workflows/cd.yml
+++ b/.github/workflows/cd.yml
@@ -90,7 +90,9 @@ jobs:
 
       - uses: pypa/cibuildwheel@v2.16.5
         env:
+          CIBW_ARCHS_LINUX: "x86_64"
           CIBW_BUILD: "cp312-*"
+          CIBW_SKIP: "*musllinux*"
 
       - name: Upload wheels
         uses: actions/upload-artifact@v4
