--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -79,7 +79,8 @@ jobs:
 
   checks-cibw:
     name: >
-      Check Python ${{ matrix.python-version }} on ${{ matrix.runs-on }} (${{matrix.arch }})
+      Check Python ${{ matrix.python-version }} on ${{ matrix.runs-on }} 
+      (${{matrix.arch }})
     runs-on: ${{ matrix.runs-on }}
     needs: [pre-commit]
     strategy:
