--- a/.github/workflows/cd.yml
+++ b/.github/workflows/cd.yml
@@ -86,6 +86,18 @@ jobs:
       fail-fast: false
       matrix:
         os: [ubuntu-latest, windows-latest, macos-latest]
+        arch: ["auto"]
+        include:
+          - os: ubuntu-latest
+            skip: "*musllinux*"
+            arch: "x86_64"
+
+          - os: windows-latest
+            arch: "ARM64"
+            test-skip: "*-win_arm64"
+
+          - os: macos-14
+            arch: "arm64"
 
     steps:
       - uses: actions/checkout@v4
@@ -94,9 +106,10 @@ jobs:
 
       - uses: pypa/cibuildwheel@v2.17.0
         env:
-          CIBW_ARCHS_LINUX: "x86_64"
           CIBW_BUILD: "cp312-*"
-          CIBW_SKIP: "*musllinux*"
+          CIBW_ARCHS: "${{ matrix.arch }}"
+          CIBW_TEST_SKIP: "${{ matrix.test-skip }}"
+          CIBW_SKIP: ${{ matrix.skip }}
 
       - name: Upload wheels
         uses: actions/upload-artifact@v4
